--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
     </div>
 </section>
 
+<section class="trends">
+    <div class="product-container">
+       <h1 class="trends-header">Trends</h1>
+       <!----------product box----------->
+       <div class="product-box">
+         <a href="#">
+             <p class="product-name">iPhone 12 Pro</p>
+         </a> 
+       </div>
+    </div>
+</section>
+
+
 <section class="partners">
     <h1 class="section-heading">Our Trusted Brands</h1>
     <p class="section-sub-heading">At BuyTech you can Shop with Confidence knowing we sell quality products from leading brands</p>
